fix 'docs | code samples | sample skills' menu on mobile

--- a/src/assets/less/menu.less
+++ b/src/assets/less/menu.less
@@ -215,3 +215,17 @@ ul.in-page-toc {
     display: none;
   }
 }
+.nav{
+  @media(max-width:@small-size){
+    margin-right:10px!important;
+  }
+}
+@media(max-width:331px){
+  .docs-header .left .sections{
+    width:100%!important;
+    display:block!important;
+  }
+  .docs-header{
+    height:99px!important;
+  }
+}
